--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ rust-version = "1.82"
 
 [workspace.dependencies]
 anyhow = "1.0.80"
-candle-core = { git = "https://github.com/EricLBuehler/candle.git", version = "0.8.0", rev = "4fea87a" }
-candle-nn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.8.0", rev = "4fea87a" }
+candle-core = { git = "https://github.com/brrr/candle.git", version = "0.8.0", rev = "49d1f1b712f65de7020d9379af116868885e3d17" }
+candle-nn = { git = "https://github.com/brrr/candle.git", version = "0.8.0", rev = "49d1f1b712f65de7020d9379af116868885e3d17" }
 serde = "1.0.197"
 serde_json = "1.0.114"
 indexmap = { version = "2.2.5", features = ["serde"] }
